# src/controllers/ComprasController.ts
@@ -1,6 +1,7 @@
-import { Compras } from "../models/Compras";
+import { Compras, TypesCompras } from "../models/Compras";
 import { Usuarios } from "../models/Usuarios";
 import { Request, Response } from "express";
+import { ComprasProdutos } from "../models/ComprasProdutos";
 
 export class ComprasController {
     async index(request: Request, response: Response) {
@@ -20,7 +21,7 @@ export class ComprasController {
     }
 
     async store(request: Request, response: Response) {
-        const { cliente, total } = request.body;
+        const { cliente, total, comprasProdutos }: TypesCompras = request.body;
 
         try {
             if (!cliente || !total) {
@@ -28,6 +29,15 @@ export class ComprasController {
             }
             //@ts-ignore
             const result = await Compras.create({ cliente, total })
+
+            comprasProdutos.forEach(async item => {
+                //@ts-ignore
+                await ComprasProdutos.create({
+                    produto: item.produto,
+                    quantidade: item.quantidade,
+                    compra: result.getDataValue('id_compra')
+                })
+            });
 
             return response.json(result)
         } catch (err) {
@@ -37,12 +47,25 @@ export class ComprasController {
     }
 
     async edit(request: Request, response: Response) {
-        const { cliente, total } = request.body;
+        const { cliente, total, comprasProdutos }: TypesCompras = request.body;
         const { id_compra } = request.params;
 
         try {
             //@ts-ignore
             const result = await Compras.findByPk(id_compra)
+
+            comprasProdutos.forEach(async item => {
+                //@ts-ignore
+                await ComprasProdutos.update({
+                    produto: item.produto,
+                    quantidade: item.quantidade,
+                    compra: result.getDataValue('id_compra')
+                }, {
+                    where: {
+                        id_compras_produtos: item.id_compra_produto
+                    }
+                })
+            });
 
             const afterUpdate = await result.update({
                 cliente,
